--- a/src/package.json
+++ b/src/package.json
@@ -26,7 +26,14 @@
         "webpack": "^4.44.1"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.30",
+        "@fortawesome/free-regular-svg-icons": "^5.14.0",
+        "@fortawesome/free-solid-svg-icons": "^5.14.0",
+        "@fortawesome/vue-fontawesome": "^0.1.10",
+        "bootstrap": "^4.5.2",
+        "jquery": "^3.5.1",
         "moment": "^2.27.0",
+        "popper.js": "^1.16.1",
         "vue": "^2.6.11"
     }
 }
