--- a/src/package.json
+++ b/src/package.json
@@ -34,6 +34,7 @@
         "jquery": "^3.5.1",
         "moment": "^2.27.0",
         "popper.js": "^1.16.1",
-        "vue": "^2.6.11"
+        "vue": "^2.6.11",
+        "vue-router": "^3.4.3"
     }
 }
