--- a/src/package.json
+++ b/src/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "cross-env": "^7.0",
         "eslint": "^7.6.0",
         "eslint-loader": "^4.0.2",
@@ -36,6 +36,8 @@
         "popper.js": "^1.16.1",
         "vee-validate": "^3.3.9",
         "vue": "^2.6.11",
-        "vue-router": "^3.4.3"
+        "vue-router": "^3.4.3",
+        "vue-toastification": "^1.7.6",
+        "vuex": "^3.5.1"
     }
 }
