--- a/src/package.json
+++ b/src/package.json
@@ -37,6 +37,7 @@
         "vee-validate": "^3.3.9",
         "vue": "^2.6.11",
         "vue-router": "^3.4.3",
+        "vue-router-multiguard": "^1.0.3",
         "vue-toastification": "^1.7.6",
         "vuex": "^3.5.1"
     }
