--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
         "vue-router": "^3.4.3",
         "vue-router-multiguard": "^1.0.3",
         "vue-toastification": "^1.7.6",
+        "vue2-timepicker": "^1.1.5",
         "vuex": "^3.5.1"
     }
 }
