--- a/src/package.json
+++ b/src/package.json
@@ -38,6 +38,7 @@
         "vue": "^2.6.11",
         "vue-router": "^3.4.3",
         "vue-router-multiguard": "^1.0.3",
+        "vue-simple-alert": "^1.1.1",
         "vue-toastification": "^1.7.6",
         "vue2-timepicker": "^1.1.5",
         "vuex": "^3.5.1"
